# wrks-ai-agent-module

./: README.md  main.py  pyproject.toml
agents/: __init__.py  careful_smart.py  common.py  data_analysis.py  document_review.py  keyword_search.py  news_search.py  registry.py  special_chars.py  tax_expert.py  tikitaka.py
data/doc_index/: hashes.json  index.faiss  index.pkl
data/doc_index_tax_expert/: hashes.json  index.faiss  index.pkl
modules/: agent.py  handler.py  openai_image.py  rag.py  tools.py
modules/chat_agents/: careful_smart.py  common.py  data_analysis.py  document_review.py  keyword_search.py  news_search.py  registry.py  special_chars.py  tax_expert.py  tikitaka.py
tools/: __init__.py  codegen.py  rag.py  tavily.py
