[tool.poetry]
name = "wrks_ai_agent_module"
version = "0.1.0"
description = ""
authors = ["shwang"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
langchain = "^0.3.13"
langgraph = "^0.2.60"
langchain-openai = "^0.2.14"
pydantic = "^2.12.5"
langchain-core = "^0.3.83"
langchain-community = "^0.3.13"
langchain-text-splitters = "^0.3.5"
jupyter = "^1.1.1"
notebook = "^7.3.1"
streamlit = "^1.41.1"
python-dotenv = "^1.0.1"
tavily-python = "^0.5.4"
openai = "^1.59.0"
pypdf = "^4.3.1"
faiss-cpu = "^1.9.0"
langsmith = "^0.3.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
